@@ -142,6 +142,10 @@ public class Chant_AstralProjection extends Chant
 			return false;
 
 		boolean success=proficiencyCheck(mob,0,auto);
+		if(!success)
+		{
+			return beneficialWordsFizzle(mob,null,"<S-NAME> chant(s) softly, but nothing happens");
+		}
 
 		CMMsg msg=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto),auto?"":"^S<S-NAME> chant(s) softly.^?");
 		if(mob.location().okMessage(mob,msg))
