@@ -50,6 +50,11 @@ public class Skill_WildernessLore extends StdSkill
 			return false;
 
 		boolean success=proficiencyCheck(mob,0,auto);
+		if(!success)
+		{
+			mob.location().show(mob,null,CMMsg.MSG_OK_VISUAL,"<S-NAME> take(s) a quick look at the terrain and feel(s) quite confused.");
+			return false;
+		}
 		CMMsg msg=CMClass.getMsg(mob,null,this,CMMsg.MSG_HANDS,"<S-NAME> take(s) a quick look at the terrain.");
 		if(mob.location().okMessage(mob,msg))
 		{
