@@ -148,20 +148,23 @@ public class Thief_Flay extends ThiefSkill
 		CMMsg msg=CMClass.getMsg(mob,target,this,CMMsg.MASK_MALICIOUS|CMMsg.MSG_THIEF_ACT,"<S-NAME> flay(s) the bare back of <T-NAMESELF>!");
 		boolean makePeace = CMLib.flags().isBound(target) && (mob.getVictim() == null) && (target.getVictim() == null);
 		
-		if(mob.location().okMessage(mob,msg))
+		if(success)
 		{
-			mob.location().send(mob,msg);
-			maliciousAffect(mob,target,asLevel,0,-1);
-			if(target.fetchEffect(ID())!=null)
-			{
-				Ability A=CMClass.getAbility("Bleeding");
-				if(A!=null) A.invoke(mob,target,true,asLevel);
-				if(makePeace)
-				{
-					mob.makePeace();
-					target.makePeace();
-				}
-			}
+    		if(mob.location().okMessage(mob,msg))
+    		{
+    			mob.location().send(mob,msg);
+    			maliciousAffect(mob,target,asLevel,0,-1);
+    			if(target.fetchEffect(ID())!=null)
+    			{
+    				Ability A=CMClass.getAbility("Bleeding");
+    				if(A!=null) A.invoke(mob,target,true,asLevel);
+    				if(makePeace)
+    				{
+    					mob.makePeace();
+    					target.makePeace();
+    				}
+    			}
+    		}
 		}
 		else
 			maliciousFizzle(mob,target,"<S-NAME> attempt(s) flay <T-NAMESELF>, but fail(s).");
